# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG    = fixed a bug that was (or could have been) crashing
#
#

Jul 8, 2008
    run_tests.py improved with --help and running stuff in subprocesses.

Jun 25, 2008
    Added many extra empty test stubs for untested things.  Thanks Nicholas!
    Test runner that works with subprocess and threads to isolate tests.
        So that if a crash happens in one test the other tests still run.
        Thanks Nicholas!

    [BUG] Added a fix for rotate on multiples of 90.0000001-90.99999 degrees.
        Thanks Charlie Nolan, and Marcus!

Jun 21, 2008
    Added BLEND_RGBA_* special flags for blit, and fill.

Jun 16, 2008
    Reworked locking code. Locks are now more strict and can only be
    removed by the object(s), that caused them.
    New Surface.get_locks() method, which returns the currently existing
    locks.
    [BUG] Fixed Surface.get_locked() bug for Surfaces which do not
      require locking, but have third-party locks attached.
    
Jun 13, 2008
    [BUG] Fixed bug with mixer.get_init() Thanks Frankie Robertson!
    [BUG] Fixed long alpha overflow bug in Surface.set_alpha().

Jun 9, 2008
    [BUG] Fixed locking and reference count leaks in Numeric surfarray
       implementation.

May 31, 2008
    Updated sprite documentation - mainly for new stuff added in pygame 1.8.0

May 24, 2008
    New Color class for color management.

Apr 30, 2008
    updates to the sprite.py collision functions that update them to match 
        the modules coding style, include appropriate comments, and are 
        about 20% faster. It also includes a collide_circle_ratio function 
        for completeness, and perhaps most importantly, fixes a bug in 
        colide_mask which kept it from working correctly.  Also added unittests
        for the collision functions.  Thanks John Krukoff!

    [BUG] sound crackles on windows; restored chunk size 